--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,34 +7,34 @@ logging.file = ocdl_ls.log
 logging.path = ./logs
 logging.pattern.file= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
 logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
-#S3
-S3.server.accesskey=<accesskey>
-S3.server.secretkey=<secretkey>
-S3.server.bucketName=<bucketName>
+
 #file path
-models.path=src/main/resources/models/lesion_segmentation
-pictures.path=src/main/resources/pictures
-segmentation.path=src/main/resources/pictures_segmentation
-ground.truth.path=src/main/resources/ISIC2018_Task1_Training_GroundTruth
-workspace.path=/home/ec2-user/OneClickDLTemp/ocdl/ls
+models.path=/home/ubuntu/models/
+#pictures.path=src/main/resources/pictures
+#segmentation.path=src/main/resources/pictures_segmentation
+#ground.truth.path=src/main/resources/ISIC2018_Task1_Training_GroundTruth
+#workspace.path=/home/ec2-user/OneClickDLTemp/ocdl/ls
 #kafka config
-bootstrap.servers.config=<kafkaurl:port>
-kafka.group=js_group_anyway6
-auto.offset.reset.config=latest
+bootstrap.servers.config=ec2-184-73-27-254.compute-1.amazonaws.com:9092
+kafka.group=js_group_anyway7
+//auto.offset.reset.config=latest
+auto.offset.reset.config=earliest
 enable.auto.commit.config=true
 auto.commit.interval.ms.config=1000
 session.timeout.ms.config=30000
 key.deserializer.class.config=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer.class.config=org.apache.kafka.common.serialization.StringDeserializer
-kafka.topic=mdmsg
+kafka.topic=vul
 #multipart config
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100GB
 spring.servlet.multipart.max-request-size=100GB
 #project Name
-project.name=TEST Segmentation1
+project.name=Code Vulnerability Detection
+project.refid=asdfghjklqwertyuiopq
+project.recycle.path=http://184.73.27.254:8090/rest/project/projectdata/recycle
 #flask sever
-flask_sever_url=<flaskurl>
+flask_sever_url=http://ec2-52-91-66-82.compute-1.amazonaws.com:5000/api/model
 
 
 
